fixed overflow scroll on firefox below 2000px (#294)
* fixed overflow scroll on firefox below 2000px

* reverted padding and removed overflow

--- a/src/shell/components/global-sidebar/GlobalSidebar.less
+++ b/src/shell/components/global-sidebar/GlobalSidebar.less
@@ -5,7 +5,6 @@
 
   .topMenu {
     background-color: @globalMenuBkgColor;
-    overflow-x: hidden;
     display: grid;
     align-items: flex-start;
     grid-auto-flow: row;
